# MintOS64

./: .gitignore  CMakeLists.txt  LICENSE  README.md  qemu.sh
bootloader/: BootLoader.asm  CMakeLists.txt  TestOSImage.asm
cmake/: FindNasm.cmake
include/: types.h
kernel32/: CMakeLists.txt  EntryPoint.s
kernel32/include/: mode_switch.h  page.h  types.h
kernel32/ldscripts/: elf_i386.10.2.0.x  elf_i386.x
kernel32/src/: EntryPoint.asm  ModeSwitch.asm  main.c  page.c
kernel64/: CMakeLists.txt
kernel64/ldscripts/: elf_x86_64.x
kernel64/src/: EntryPoint.asm  main.c
utility/: CMakeLists.txt
utility/image_maker/: CMakeLists.txt  main.c
